<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.0.1</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>fr.ses10doigts</groupId>
	<artifactId>CoursesCrawler</artifactId>
	<version>1.5.11</version>
	<name>CoursesCrawler</name>
	<description>Change money concience</description>
	<properties>
		<java.version>17</java.version>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-thymeleaf</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-configuration-processor</artifactId>
			<optional>true</optional>
		</dependency>
<!--		<dependency>-->
<!--		    <groupId>org.springframework.boot</groupId>-->
<!--		    <artifactId>spring-boot-starter-quartz</artifactId>-->
<!--		</dependency>-->
		
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
<!--			<scope>runtime</scope>-->
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
		<dependency>
		    <groupId>org.jsoup</groupId>
		    <artifactId>jsoup</artifactId>
		    <version>1.15.3</version>
		</dependency>
		
		<dependency> 
		  <groupId>org.apache.poi</groupId>
		  <artifactId>poi</artifactId> 
		  <version>5.5.1</version>
		</dependency> 
		<dependency> 
		  <groupId>org.apache.poi</groupId> 
		  <artifactId>poi-ooxml</artifactId> 
		  <version>5.5.1</version>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<scope>provided</scope>
		</dependency>
		
		<dependency>
		  <groupId>org.telegram</groupId>
		  <artifactId>telegrambots-springboot-longpolling-starter</artifactId>
		  <version>8.0.0</version>
		</dependency>
		<dependency>
		  <groupId>org.telegram</groupId>
		  <artifactId>telegrambots-client</artifactId>
		  <version>9.2.0</version>
		  <!--version>8.0.0</version-->
		</dependency>
	</dependencies>

<build>
    <plugins>
        <!-- Plugin pour compiler le code en Java 17 -->
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>3.11.0</version>
            <configuration>
                <source>17</source>
                <target>17</target>
            </configuration>
        </plugin>

		<plugin>
		  <groupId>org.springframework.boot</groupId>
		  <artifactId>spring-boot-maven-plugin</artifactId>
		  <version>3.2.5</version> <!-- ou la version adaptée -->
		  <executions>
		    <execution>
		      <goals>
		        <goal>repackage</goal>
		      </goals>
		    </execution>
		  </executions>
		</plugin>
    </plugins>
</build>





</project>
